<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/bgtop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:paddingStart="35dp"
            android:textStyle="bold"
            android:paddingBottom="40dp"
            android:textColor="@color/white2"
            android:textSize="30sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="7dp"
            android:hint="@string/phonenumber"
            android:inputType="number"
            android:paddingStart="15dp"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="7dp"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:inputType="textPassword"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/pink1"
            android:text="@string/login"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/white2"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        android:src="@drawable/bottomcover"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>